@@ -1,5 +1,5 @@
 /*
- *  Copyright 2001-2009 Stephen Colebourne
+ *  Copyright 2001-2014 Stephen Colebourne
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -198,6 +198,12 @@ public final class CopticChronology extends BasicFixedMonthChronology {
             return this;
         }
         return getInstance(zone);
+    }
+
+    //-----------------------------------------------------------------------
+    @Override
+    boolean isLeapDay(long instant) {
+        return dayOfMonth().get(instant) == 6 && monthOfYear().isLeap(instant);
     }
 
     //-----------------------------------------------------------------------
