@@ -1,5 +1,5 @@
 /*
- *  Copyright 2001-2005 Stephen Colebourne
+ *  Copyright 2001-2014 Stephen Colebourne
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -63,5 +63,10 @@ class TestGJDayOfMonthField extends TestGJDateTimeField {
 
     public long roundFloor(long millis) {
         return iChronology.getDateOnlyMillis(millis);
+    }
+
+    @Override
+    public boolean isLeap(long instant) {
+        return get(instant) == 29 && iChronology.monthOfYear().isLeap(instant);
     }
 }
