@@ -77,6 +77,9 @@ Bug fixes since 2.3
   Previously, new DateTime(Long.MAX_VALUE) would be accepted, now it will be rejected
   This ensures that the maximum/minimum year are respected
 
+- Ensure isLeap() returns correct result for day fields [#110]
+  Day-of-month and day-of-year fields should report leap days
+
 - Handle broken Android implementations better [#103]
   Apparently some Android implementations throw ClassCastException when comparing different types
   Thats dumb and wrong but the change to handle it is harmless
